CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(320) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    CONSTRAINT uk_users_email UNIQUE (email)
);

CREATE TABLE decks (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    owner_id BIGINT NOT NULL,
    name VARCHAR(120) NOT NULL,
    language_code VARCHAR(10) NOT NULL,
    is_private BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT fk_decks_owner FOREIGN KEY (owner_id) REFERENCES users (id)
);

CREATE INDEX idx_decks_owner_id ON decks (owner_id);

CREATE TABLE cards (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    deck_id BIGINT NOT NULL,
    term VARCHAR(200) NOT NULL,
    definition VARCHAR(2000) NOT NULL,
    example VARCHAR(500),
    cefr VARCHAR(5),
    tags VARCHAR(200),
    next_review_at TIMESTAMP(6),
    last_reviewed_at TIMESTAMP(6),
    interval_days INTEGER NOT NULL DEFAULT 0,
    CONSTRAINT uk_cards_deck_term UNIQUE (deck_id, term),
    CONSTRAINT fk_cards_deck FOREIGN KEY (deck_id) REFERENCES decks (id)
);

CREATE INDEX idx_cards_deck_id ON cards (deck_id);
CREATE INDEX idx_cards_next_review_at ON cards (next_review_at);

CREATE TABLE review_logs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    card_id BIGINT NOT NULL,
    rating VARCHAR(10) NOT NULL,
    reviewed_at TIMESTAMP(6) NOT NULL,
    CONSTRAINT ck_review_logs_rating CHECK (rating IN ('AGAIN', 'HARD', 'GOOD', 'EASY')),
    CONSTRAINT fk_review_logs_card FOREIGN KEY (card_id) REFERENCES cards (id)
);

CREATE INDEX idx_review_logs_card_id ON review_logs (card_id);
CREATE INDEX idx_review_logs_reviewed_at ON review_logs (reviewed_at);
