@startuml

class User {
  +id: Long
  +email: String
  +passwordHash: String
}

class Deck {
  +id: Long
  +name: String
  +languageCode: String
  +isPrivate: Boolean
}

class Card {
  +id: Long
  +term: String
  +definition: String
  +example: String
  +cefrLevel: String
  +tags: String
}

class ReviewLog {
  +id: Long
  +rating: String
  +reviewedAt: LocalDateTime
}

User "1" -- "many" Deck
Deck "1" -- "many" Card
Card "1" -- "many" ReviewLog

@enduml
